syntax = "proto3";

package proto;

option go_package="api/articlepb";

message Article {
    int32 id = 1;
    string title=2;
    string link=3;
    string image=4;
    string description =5;


}
message InsertRequest{
    Article article =1;
}
message InsertResponse{
    int32 statusCode = 1;
    string message = 2;
}
message ReadRequest{
    int32 id = 1;
}
message ReadResponse{
    Article article =1;
}
message UpdateRequest{
    Article newarticle =1;
}
message UpdateResponse{
    Article article =1;

}
message DeleteRequest{
    int32 id =1;
}
message DeleteResponse{
    int32 status = 1;
    string message =2;
}
message SearchRequest{
    string SearchTitle =1;

}
message SearchResponse{
    repeated Article result = 1;
}

service ArticleService{
    rpc Insert(InsertRequest) returns (InsertResponse){}
    rpc Read(ReadRequest) returns (ReadResponse){}
    rpc Update(UpdateRequest) returns (UpdateResponse){}
    rpc Delete(DeleteRequest) returns (DeleteResponse){}
    rpc Search(SearchRequest) returns (SearchResponse){}
}
